Adiciona evento de navegação para simples

--- a/app/src/main/res/layout/activity_juros_simples.xml
+++ b/app/src/main/res/layout/activity_juros_simples.xml
@@ -96,6 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:onClick="calcularClick"
         android:text="Calcular Juros Simples"
         app:layout_constraintEnd_toStartOf="@+id/buttonRetornar"
         app:layout_constraintHorizontal_bias="0.5"
@@ -106,6 +107,7 @@
         android:id="@+id/buttonRetornar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="retornarClick"
         android:text="Retornar"
         app:layout_constraintBaseline_toBaselineOf="@+id/buttonCalcular"
         app:layout_constraintEnd_toEndOf="parent"
