--- a/app/src/main/res/layout/activity_juros_simples.xml
+++ b/app/src/main/res/layout/activity_juros_simples.xml
@@ -42,7 +42,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewValorPresente" />
 
     <TextView
         android:id="@+id/textView5"
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTaxaDeJuros" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewValorPresente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
