--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:onClick="abreJurosSimples"
+        android:onClick="jurosSimplesClick"
         android:text="Juros Simples"
         app:layout_constraintEnd_toStartOf="@+id/buttonJurosCompostos"
         app:layout_constraintHorizontal_bias="0.5"
