Adiciona juros compostos

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
         android:id="@+id/buttonJurosCompostos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="jurosCompostosClick"
         android:text="Juros Compostos"
         app:layout_constraintBaseline_toBaselineOf="@+id/buttonJurosSimples"
         app:layout_constraintEnd_toEndOf="parent"
